@@ -47,6 +47,12 @@ enum
     @library{wxcore}
     @category{ctrl}
     @appearance{genericdirctrl.png}
+    @event{EVT_DIRCTRL_CHANGED(id, func)}
+          Selected directory has changed.
+          Processes a @c wxEVT_COMMAND_DIRCTRL_CHANGED event type.
+          Notice that this event is generated even for the changes done by the
+          program itself and not only those done by the user.
+          @since 2.9.5
 */
 class wxGenericDirCtrl : public wxControl
 {
